--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.username=root
 spring.datasource.password=Vijay@13
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+
+#spring.datasource.url=jdbc:mysql://productcatalogservice.c72s6yo06t9c.eu-north-1.rds.amazonaws.com:3306/pcs
+#spring.datasource.username=root
+#spring.datasource.password=Vijayrao13
