--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.password=Vijay@13
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
+spring.data.redis.port=6379
+spring.data.redis.host=localhost
 
 #spring.datasource.url=jdbc:mysql://productcatalogservice.c72s6yo06t9c.eu-north-1.rds.amazonaws.com:3306/pcs
 #spring.datasource.username=root
