Eureka client is added in the code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ProductCatalogService
+#spring.application.name=ProductCatalogService
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/productcatalogservice
@@ -13,3 +13,8 @@ spring.data.redis.host=localhost
 #spring.datasource.url=jdbc:mysql://productcatalogservice.c72s6yo06t9c.eu-north-1.rds.amazonaws.com:3306/pcs
 #spring.datasource.username=root
 #spring.datasource.password=Vijayrao13
+
+spring.application.name = productservice
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
